added the typesafe config lib and replaced my crazy temporary config util

--- a/aleph2_access_manager/.settings/org.eclipse.wst.common.component
+++ b/aleph2_access_manager/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
     <wb-module deploy-name="aleph2_access_manager">
         <wb-resource deploy-path="/" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/test"/>
+        <wb-resource deploy-path="/" source-path="/resources"/>
     </wb-module>
 </project-modules>
